<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="label_search">Search</string>
    <string name="hint_search_movie">Search movies</string>
    <string name="label_search_not_found">Search not found</string>
    <string name="label_movies_not_found">Movies not found</string>
    <string name="label_no_internet_connection">No internet connection</string>
    <string name="label_synopsis">Synopsis</string>
    <string name="label_release_date">Release date:</string>
    <string name="label_language">Language</string>
    <string name="label_genre">Genre:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="label_movie_poster">movie poster</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_now_playing">Now Playing</string>
    <string name="label_upcoming_movies">Upcoming Movies</string>
    <string name="action_search">Search</string>
    <string name="label_setting">Setting</string>
    <string name="label_search_result">Search Result</string>
    <string name="label_notification">Notification</string>
    <string name="label_upcoming_reminder_notification">Upcoming Reminder Notification</string>
    <string name="label_turn_on_off_upcoming_reminder">Turn on/off upcoming reminder</string>
    <string name="label_change_language">Change Language</string>
    <string name="label_notif_message"> is out!</string>
    <string name="label_off">OFF</string>
    <string name="label_on">ON</string>
    <string name="label_favourite_movie">Favourite Movie</string>
    <string name="label_favourite">Favourite</string>
    <string name="label_added_to_favourite">Added to favourite</string>
    <string name="label_removed_from_favourite">Removed from favourite</string>
    <string name="label_empty_favorite_movies">No Favorite Movies</string>
    <string name="label_daily_reminder_notification">Daily Reminder Notification</string>
    <string name="label_turn_on_off_daily_reminder">Turn on/off daily reminder</string>
    <string name="message_error_load_data">Can\'t loaded data</string>
    <string name="label_missing_you">missing you</string>
    <string name="appwidget_text">Your Favorite Movie</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">No Data</string>
    <string name="label_failed_to_load_data">Failed to load data</string>
</resources>
